# argos3-outdated

src/plugins/robots/prototype/: CMakeLists.txt
src/plugins/robots/prototype/control_interface/: ci_cameras_sensor.cpp  ci_cameras_sensor.h  ci_cameras_sensor_algorithm.h  ci_prototype_cameras_sensor.cpp  ci_prototype_cameras_sensor.h  ci_prototype_colored_blob_forwards_camera_sensor.cpp  ci_prototype_colored_blob_forwards_camera_sensor.h  ci_prototype_electromagnet_actuator.cpp  ci_prototype_electromagnet_actuator.h  ci_prototype_forwards_camera_sensor.cpp  ci_prototype_forwards_camera_sensor.h  ci_prototype_proximity_sensor.h  ci_prototype_radios_actuator.cpp  ci_prototype_radios_sensor.cpp
src/plugins/robots/prototype/control_interface/ci_cameras_sensor_algorithms/: ci_cameras_sensor_apriltags_algorithm.cpp  ci_cameras_sensor_apriltags_algorithm.h  ci_cameras_sensor_leddetector_algorithm.cpp  ci_cameras_sensor_leddetector_algorithm.h  ci_cameras_sensor_tagdetector_algorithm.cpp  ci_cameras_sensor_tagdetector_algorithm.h
src/plugins/robots/prototype/simulator/: argos_website_url.tex  barcode2_entity.cpp  barcode2_entity.h  barcode2_equipped_entity.cpp  barcode2_equipped_entity.h  barcode2_medium.cpp  barcode2_medium.h  body_entity.cpp  body_entity.h  body_equipped_entity.cpp  body_equipped_entity.h  box_geometry3.h  camera_entity.cpp  camera_entity.h  camera_equipped_entity.cpp  camera_equipped_entity.h  cylinder_geometry3.h  dynamics3d_prototype_model.cpp  dynamics3d_prototype_model.h  electromagnet_entity.cpp  electromagnet_entity.h  electromagnet_equipped_entity.cpp  electromagnet_equipped_entity.h  forwards_camera_entity.cpp  forwards_camera_entity.h  forwards_camera_equipped_entity.cpp  forwards_camera_equipped_entity.h  frame_entity.cpp  frame_entity.h  frame_equipped_entity.cpp  frame_equipped_entity.h  joint_entity.cpp  joint_entity.h  joint_equipped_entity.cpp  joint_equipped_entity.h  prototype_cameras_sensor.cpp  prototype_cameras_sensor.h  prototype_colored_blob_forwards_camera_sensor.cpp  prototype_colored_blob_forwards_camera_sensor.h  prototype_electromagnets_default_actuator.cpp  (+32 more)
src/plugins/robots/prototype/simulator/actuators/: prototype_leds_default_actuator.cpp  prototype_leds_default_actuator.h  prototype_radios_default_actuator.cpp
src/plugins/robots/prototype/simulator/entities/: barcode2_entity.cpp  barcode2_entity.h  barcode2_equipped_entity.cpp  barcode2_equipped_entity.h  body_entity.cpp  body_entity.h  body_equipped_entity.cpp  body_equipped_entity.h  camera_entity.cpp  camera_entity.h  camera_equipped_entity.cpp  camera_equipped_entity.h  radio_entity.cpp  (+10 more)
src/plugins/robots/prototype/utility/: geometry3.h
src/plugins/robots/robot/: CMakeLists.txt
src/plugins/robots/robot/control_interface/: ci_robot_joints_actuator.cpp  ci_robot_joints_actuator.h  ci_robot_joints_sensor.cpp  ci_robot_joints_sensor.h  ci_robot_proximity_sensor.cpp  ci_robot_proximity_sensor.h  ci_robot_rotational_joint_actuator.cpp  ci_robot_rotational_joint_actuator.h  ci_robot_rotational_joint_sensor.cpp  ci_robot_rotational_joint_sensor.h
src/plugins/robots/robot/simulator/: body_entity.cpp  body_entity.h  body_equipped_entity.cpp  body_equipped_entity.h  box_geometry3.h  cylinder_geometry3.h  dynamics2d_robot_model.cpp  dynamics2d_robot_model.h  dynamics3d_robot_model.cpp  dynamics3d_robot_model.h  frame_entity.cpp  frame_entity.h  frame_equipped_entity.cpp  frame_equipped_entity.h  geometry3.h  joint_entity.cpp  joint_entity.h  joint_equipped_entity.cpp  joint_equipped_entity.h  qtopengl_robot.cpp  qtopengl_robot.h  robot_entity.cpp  robot_entity.h  robot_joints_default_actuator.cpp  robot_joints_default_actuator.h  robot_joints_default_sensor.cpp  robot_joints_default_sensor.h  robot_proximity_default_sensor.cpp  robot_proximity_default_sensor.h  sphere_geometry3.h
src/plugins/robots/robotic-arm/: CMakeLists.txt
src/plugins/robots/robotic-arm/control_interface/: ci_roboticarm_rotational_joint_actuator.cpp  ci_roboticarm_rotational_joint_actuator.h  ci_roboticarm_rotational_joint_sensor.cpp  ci_roboticarm_rotational_joint_sensor.h
src/plugins/robots/robotic-arm/simulator/: dynamics2d_roboticarm_entity.cpp  dynamics2d_roboticarm_entity.h  dynamics2d_roboticarm_model.cpp  dynamics2d_roboticarm_model.h  dynamics3d_roboticarm_entity.cpp  dynamics3d_roboticarm_entity.h  dynamics3d_roboticarm_model.cpp  dynamics3d_roboticarm_model.h  link_entity.cpp  link_entity.h  link_equipped_entity.cpp  link_equipped_entity.h  qtopengl_roboticarm.cpp  qtopengl_roboticarm.h  roboticarm_entity.cpp  roboticarm_entity.h
src/plugins/simulator/physics_engines/dynamics3d/: .#dynamics3d_model.cpp  CMakeLists (external-libs).txt  CMakeLists.txt  dynamics3d_body.cpp  dynamics3d_body.h  dynamics3d_box_entity.cpp  dynamics3d_box_entity.h  dynamics3d_box_model.cpp  dynamics3d_box_model.h  dynamics3d_cylinder_model.cpp  dynamics3d_cylinder_model.h  dynamics3d_engine.cpp  dynamics3d_engine.h  dynamics3d_entity.h  dynamics3d_floor.cpp  dynamics3d_floor.h  dynamics3d_heightfield_entity.cpp  dynamics3d_heightfield_entity.h  dynamics3d_heightfield_model.cpp  dynamics3d_heightfield_model.h  dynamics3d_joint.cpp  dynamics3d_joint.h  dynamics3d_model.cpp  dynamics3d_model.h  dynamics3d_plugin.h  dynamics3d_terrain_entity.cpp
src/testing/bebot_controller/: CMakeLists.txt
src/testing/bebot_controller/src/: bebot_controller.cpp  bebot_controller.h  block_demo.h  block_detector.cc  block_detector.h  block_tracker.cc  pid_controller.h  pyramid_experiment.h  qualitative_stigmergy_experiment.h  quantitative_stigmergy_experiment.h  state.cc  state.h  tag.h
src/testing/prototype_testbenches/qt_camera_visualisation/: CMakeLists.txt  camera_user_functions.cpp  camera_user_functions.h  prototype_camera_user_functions.cpp  prototype_camera_user_functions.h  prototype_camera_window.cpp  prototype_camera_window.h
src/testing/srocs_qtopengl_user_functions/: CMakeLists.txt  qt_robot_user_interface_widget.cpp  qt_robot_user_interface_widget.h  srocs_qtopengl_user_functions.cpp  srocs_qtopengl_user_functions.h
(+141 files in other folders)
